# project-picker

./: .gitignore  Cargo.toml  README.md
docs/superpowers/plans/: 2026-04-27-rust-egui-migration.md  2026-06-01-mycelium-app-launcher.md
docs/superpowers/specs/: 2026-04-27-rust-egui-project-picker-design.md
src/: app.rs  assets.rs  daemon.rs  icons.rs  main.rs  paths.rs  projects.rs  terminal.rs
src/ui/: hints.rs  list.rs  mod.rs  search.rs  theme.rs
