[package]
name = "project-picker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "project-picker"
path = "src/main.rs"

[dependencies]
egui = "0.29"
egui-wgpu = "0.29"
wgpu = { version = "22", features = [] }
raw-window-handle = "0.6"

wayland-client = { version = "0.31", features = ["system"] }
wayland-protocols-wlr = { version = "0.2", features = ["client"] }
smithay-client-toolkit = { version = "0.18", features = ["calloop"] }
calloop = "0.12"
calloop-wayland-source = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"

image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
ico = "0.3"
resvg = "0.42"
usvg = "0.42"
tiny-skia = "0.11"
pollster = "0.3"

[dev-dependencies]
tempfile = "3"
