[package]
name = "project-picker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "project-picker"
path = "src/main.rs"

[dependencies]
egui = "0.29"
egui-wgpu = "0.29"
wgpu = { version = "22", features = [] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"

image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
ico = "0.3"
resvg = "0.42"
usvg = "0.42"
tiny-skia = "0.11"
pollster = "0.3"
egui-phosphor = { version = "0.7", features = ["regular"] }
egui-winit = { version = "0.29", default-features = false, features = ["wayland", "clipboard", "links"] }
winit = { version = "0.30", default-features = false, features = ["wayland", "rwh_06"] }

[dev-dependencies]
tempfile = "3"
